fix(Intiface): select spacing

--- a/plugins/IntifaceIntegration/styles.scss
+++ b/plugins/IntifaceIntegration/styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-right: 8px;
 }
 
 .button {
@@ -14,6 +15,10 @@
   align-items: center;
 }
 
+.selectGap {
+  flex-grow: 1;
+}
+
 .selectLabel {
   flex-grow: 0;
   flex-shrink: 0;
@@ -21,6 +26,12 @@
 }
 
 .select {
-  flex-grow: 1;
+  flex-grow: 0;
   flex-shrink: 0;
+
+  width: 30ch;
+}
+
+.slider {
+  margin-bottom: unset;
 }
